# swift-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  swift.py
.github/: build.yml
.github/workflows/: build.yml  deploy.yml  main.yml
backend/: pyproject.toml
backend/swift_demo/: main.py
backend/swift_demo/schemas/: swift.py
backend/swift_demo/services/: swift.py
frontend/: index.html  package.json
frontend/src/: config.ts  main.css  main.tsx  types.ts
frontend/src/api/: get-transaction-details.ts  index.ts
frontend/src/components/: index.ts
frontend/src/components/NavBar/: NavBar.tsx
frontend/src/components/TransactionView/: TransactionView.tsx
frontend/src/hooks/: index.ts  useTransactionDetails.ts
scripts/: build-config.yml  build-image  deploy
